--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         </div>
       </div>
       <div class="logo"></div>
-
+      <input class="menu-btn" type="checkbox" id="menu-btn" />
+      <label class="menu-icon" for="menu-btn"
+        ><span class="nav-icon"></span
+      ></label>
       <ul class="menu">
         <li><a>Home</a></li>
         <li><a>GST Registration</a></li>
@@ -92,6 +95,87 @@
         <div class="inside">
           iso 9001:2015<br />iso 22000:2018<br />ISO 50001:2018<br />
           ISO 45001:2018
+        </div>
+      </div>
+      <div class="footersec">
+        <div class="company-details">
+          Company<br />
+
+          <a>About us</a><br />
+          <a>Services</a><br />
+          <a>Contact Us</a><br />
+
+          <a>Partner Us</a><br />
+          <a>Swiggy / Zomata registration</a><br />
+          <a>Site Map</a>
+        </div>
+
+        <div class="Certificate">
+          Services<br />
+
+          <a>company registration service</a><br />
+          <a>GST registration</a><br />
+          <a>FSSAI registration consultants</a><br />
+          <a>IEC code registration consultants</a><br />
+          <a>income tax return filing</a><br />
+          <a>Startup India registration</a><br />
+        </div>
+
+        <div class="single-Certificate">
+          Filing<br />
+
+          <a>GST filing online</a><br />
+
+          <a>Income tax filing</a><br />
+          <a>ROC Filing</a><br />
+          <a>TDS</a><br />
+          <a>GST Registration</a><br />
+          <a>Ad Code Registration</a><br />
+        </div>
+      </div>
+      <div class="footersec1">
+        <div class="company-details">
+          FQA<br />
+
+          <a>what is Gst</a><br />
+
+          <a>How to register Gst </a><br />
+
+          <a>How to cancel Gst Registration</a><br />
+
+          <a>how to download gst certificate</a><br />
+
+          <a>how to file nil gst return</a><br />
+
+          <a>ISI MARK</a><br />
+
+          <br />
+
+          <br />
+          <br />
+        </div>
+
+        <div class="Certificate">
+          Certificate<br />
+
+          <a>IEC</a><br />
+          <a>FSSAI Registration Online</a><br />
+          <a>APEDA</a><br />
+          <a>MSME / UDYAM</a><br />
+          <a>TRADEMARK</a><br />
+          <a>ISO</a><br />
+          <a>chartered accountants</a><br />
+        </div>
+
+        <div class="single-Certificate">
+          Software<br />
+
+          <a>GST Billing software</a><br />
+          <a>FSSAI Registration </a><br />
+          <a>Company Registration</a><br />
+          <a>Trademark Registration</a><br />
+          <a>Accounting Software</a><br />
+          <a>Tax consultants</a>
         </div>
       </div>
     </div>
