--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         Free Gst Registration | Unlimited Bills Gst Returns | Free Gst Billing
         Software
         <a href="" target="blank">
-          <button type="button" class="btn btn-primary">Register</button>
+          <button type="button" class="btn">Register</button>
         </a>
         <div class="phone">
           <span href="">Call : 84 700 74 700</span>
@@ -97,86 +97,86 @@
           ISO 45001:2018
         </div>
       </div>
-      <div class="footersec">
-        <div class="company-details">
-          Company<br />
+    </div>
+    <div class="footersec">
+      <div class="company-details">
+        Company<br />
 
-          <a>About us</a><br />
-          <a>Services</a><br />
-          <a>Contact Us</a><br />
+        <a>About us</a><br />
+        <a>Services</a><br />
+        <a>Contact Us</a><br />
 
-          <a>Partner Us</a><br />
-          <a>Swiggy / Zomata registration</a><br />
-          <a>Site Map</a>
-        </div>
-
-        <div class="Certificate">
-          Services<br />
-
-          <a>company registration service</a><br />
-          <a>GST registration</a><br />
-          <a>FSSAI registration consultants</a><br />
-          <a>IEC code registration consultants</a><br />
-          <a>income tax return filing</a><br />
-          <a>Startup India registration</a><br />
-        </div>
-
-        <div class="single-Certificate">
-          Filing<br />
-
-          <a>GST filing online</a><br />
-
-          <a>Income tax filing</a><br />
-          <a>ROC Filing</a><br />
-          <a>TDS</a><br />
-          <a>GST Registration</a><br />
-          <a>Ad Code Registration</a><br />
-        </div>
+        <a>Partner Us</a><br />
+        <a>Swiggy / Zomata registration</a><br />
+        <a>Site Map</a>
       </div>
-      <div class="footersec1">
-        <div class="company-details">
-          FQA<br />
 
-          <a>what is Gst</a><br />
+      <div class="Certificate">
+        Services<br />
 
-          <a>How to register Gst </a><br />
+        <a>company registration service</a><br />
+        <a>GST registration</a><br />
+        <a>FSSAI registration consultants</a><br />
+        <a>IEC code registration consultants</a><br />
+        <a>income tax return filing</a><br />
+        <a>Startup India registration</a><br />
+      </div>
 
-          <a>How to cancel Gst Registration</a><br />
+      <div class="single-Certificate">
+        Filing<br />
 
-          <a>how to download gst certificate</a><br />
+        <a>GST filing online</a><br />
 
-          <a>how to file nil gst return</a><br />
+        <a>Income tax filing</a><br />
+        <a>ROC Filing</a><br />
+        <a>TDS</a><br />
+        <a>GST Registration</a><br />
+        <a>Ad Code Registration</a><br />
+      </div>
+    </div>
+    <div class="footersec1">
+      <div class="company-details">
+        FQA<br />
 
-          <a>ISI MARK</a><br />
+        <a>what is Gst</a><br />
 
-          <br />
+        <a>How to register Gst </a><br />
 
-          <br />
-          <br />
-        </div>
+        <a>How to cancel Gst Registration</a><br />
 
-        <div class="Certificate">
-          Certificate<br />
+        <a>how to download gst certificate</a><br />
 
-          <a>IEC</a><br />
-          <a>FSSAI Registration Online</a><br />
-          <a>APEDA</a><br />
-          <a>MSME / UDYAM</a><br />
-          <a>TRADEMARK</a><br />
-          <a>ISO</a><br />
-          <a>chartered accountants</a><br />
-        </div>
+        <a>how to file nil gst return</a><br />
 
-        <div class="single-Certificate">
-          Software<br />
+        <a>ISI MARK</a><br />
 
-          <a>GST Billing software</a><br />
-          <a>FSSAI Registration </a><br />
-          <a>Company Registration</a><br />
-          <a>Trademark Registration</a><br />
-          <a>Accounting Software</a><br />
-          <a>Tax consultants</a>
-        </div>
+        <br />
+
+        <br />
+        <br />
+      </div>
+
+      <div class="Certificate">
+        Certificate<br />
+
+        <a>IEC</a><br />
+        <a>FSSAI Registration Online</a><br />
+        <a>APEDA</a><br />
+        <a>MSME / UDYAM</a><br />
+        <a>TRADEMARK</a><br />
+        <a>ISO</a><br />
+        <a>chartered accountants</a><br />
+      </div>
+
+      <div class="single-Certificate">
+        Software<br />
+
+        <a>GST Billing software</a><br />
+        <a>FSSAI Registration </a><br />
+        <a>Company Registration</a><br />
+        <a>Trademark Registration</a><br />
+        <a>Accounting Software</a><br />
+        <a>Tax consultants</a>
       </div>
     </div>
 
