--- a/index.html
+++ b/index.html
@@ -100,84 +100,53 @@
     </div>
     <div class="footersec">
       <div class="company-details">
-        Company<br />
-
-        <a>About us</a><br />
-        <a>Services</a><br />
-        <a>Contact Us</a><br />
-
-        <a>Partner Us</a><br />
-        <a>Swiggy / Zomata registration</a><br />
-        <a>Site Map</a>
+        GST CONSULTANT<br />
+        &nbsp;&nbsp;
+        <hr />
+        <br />
+        <span>
+          We are GST Service providers in chennai offering GST filing,Company
+          Registration service at best price in Chennai.we are only Gst
+          Consultant in Chennai to do Free Gst Registration for our customer and
+          Unlimited Bills on Gst Filing.
+        </span>
       </div>
 
-      <div class="Certificate">
-        Services<br />
+      <div class="company-details">
+        SERVICES<br />
+        &nbsp;&nbsp;
+        <hr />
 
-        <a>company registration service</a><br />
-        <a>GST registration</a><br />
-        <a>FSSAI registration consultants</a><br />
-        <a>IEC code registration consultants</a><br />
-        <a>income tax return filing</a><br />
-        <a>Startup India registration</a><br />
+        <div style="color: yellow">Digital Signature</div>
+        <div style="color: yellow">Udyam Registration Free</div>
+        <div style="color: yellow">GST Billing Software</div>
+        <div>GST Services</div>
+        <div style="color: yellow">GST consultants online</div>
       </div>
 
-      <div class="single-Certificate">
-        Filing<br />
+      <div class="company-details">
+        COMPANY REGISTRATION<br />
+        &nbsp;&nbsp;
+        <hr />
+        <br />
+        <span>
+          We are team of Experienced Consultant who have experience on Company
+          registration,private limited company registration.company registration
+          services in chennai and PVT Ltd company registration at reasonable
+          cost.
+        </span>
+      </div>
+      <div class="company-details">
+        Contact Us<br />
+        &nbsp;&nbsp;
+        <hr />
 
-        <a>GST filing online</a><br />
-
-        <a>Income tax filing</a><br />
-        <a>ROC Filing</a><br />
-        <a>TDS</a><br />
-        <a>GST Registration</a><br />
-        <a>Ad Code Registration</a><br />
+        <div style="color: yellow">Chennai</div>
+        <div style="color: yellowgreen">Call: 84700 74700</div>
       </div>
     </div>
-    <div class="footersec1">
-      <div class="company-details">
-        FQA<br />
-
-        <a>what is Gst</a><br />
-
-        <a>How to register Gst </a><br />
-
-        <a>How to cancel Gst Registration</a><br />
-
-        <a>how to download gst certificate</a><br />
-
-        <a>how to file nil gst return</a><br />
-
-        <a>ISI MARK</a><br />
-
-        <br />
-
-        <br />
-        <br />
-      </div>
-
-      <div class="Certificate">
-        Certificate<br />
-
-        <a>IEC</a><br />
-        <a>FSSAI Registration Online</a><br />
-        <a>APEDA</a><br />
-        <a>MSME / UDYAM</a><br />
-        <a>TRADEMARK</a><br />
-        <a>ISO</a><br />
-        <a>chartered accountants</a><br />
-      </div>
-
-      <div class="single-Certificate">
-        Software<br />
-
-        <a>GST Billing software</a><br />
-        <a>FSSAI Registration </a><br />
-        <a>Company Registration</a><br />
-        <a>Trademark Registration</a><br />
-        <a>Accounting Software</a><br />
-        <a>Tax consultants</a>
-      </div>
+    <div>
+      <div class="last">Facebook Twitter LinkedIn</div>
     </div>
 
     <!-- CSS only -->
