--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
     </div>
     <div class="footersec">
       <div class="company-details">
-        GST CONSULTANT<br />
-        &nbsp;&nbsp;
+        <div style="font-size: 9px">GST CONSULTANT</div>
         <hr />
         <br />
         <span>
@@ -113,10 +112,9 @@
       </div>
 
       <div class="company-details">
-        SERVICES<br />
-        &nbsp;&nbsp;
+        <div style="font-size: 9px">SERVICES</div>
         <hr />
-
+        <br />
         <div style="color: yellow">Digital Signature</div>
         <div style="color: yellow">Udyam Registration Free</div>
         <div style="color: yellow">GST Billing Software</div>
@@ -125,8 +123,8 @@
       </div>
 
       <div class="company-details">
-        COMPANY REGISTRATION<br />
-        &nbsp;&nbsp;
+        <div style="font-size: 9px">COMPANY REGISTRATION</div>
+
         <hr />
         <br />
         <span>
@@ -137,8 +135,7 @@
         </span>
       </div>
       <div class="company-details">
-        Contact Us<br />
-        &nbsp;&nbsp;
+        <div style="font-size: 9px">Contact us</div>
         <hr />
 
         <div style="color: yellow">Chennai</div>
