--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         Free Gst Registration | Unlimited Bills Gst Returns | Free Gst Billing
         Software
         <a href="" target="blank">
-          <button type="button" class="btn">Register</button>
+          <button type="button" class="btns">Register</button>
         </a>
         <div class="phone">
           <span href="">Call : 84 700 74 700</span>
@@ -35,7 +35,7 @@
         <li><a>Contact us</a></li>
       </ul>
     </div>
-    <div class="container">
+    <div class="containers">
       <div class="item item1"></div>
       <div class="item item2">
         <div class="inside">
@@ -98,56 +98,55 @@
         </div>
       </div>
     </div>
-    <div class="footersec">
-      <div class="company-details">
-        <div style="font-size: 10px">GST CONSULTANT</div>
-        <hr />
-        <br />
-        <span>
-          We are GST Service providers in chennai offering GST filing,Company
-          Registration service at best price in Chennai.we are only Gst
-          Consultant in Chennai to do Free Gst Registration for our customer and
-          Unlimited Bills on Gst Filing.
-        </span>
-      </div>
+    <div class="footersec container-fluid">
+      <div class="row" style="padding: 10px">
+        <div class="company-details col-xl-3 col-sm-12 col-md-6">
+          <div>GST CONSULTANT</div>
+          <hr style="margin: 0" />
+          <br />
+          <span>
+            We are GST Service providers in chennai offering GST filing,Company
+            Registration service at best price in Chennai.we are only Gst
+            Consultant in Chennai to do Free Gst Registration for our customer
+            and Unlimited Bills on Gst Filing.
+          </span>
+        </div>
+        <div class="company-details col-xl-3 col-sm-12 col-md-6">
+          <div>SERVICES</div>
+          <hr style="margin: 0" />
 
-      <div class="company-details">
-        <div style="font-size: 10px">SERVICES</div>
-        <hr />
-        <br />
-        <div style="color: yellow">Digital Signature</div>
-        <div style="color: yellow">Udyam Registration Free</div>
-        <div style="color: yellow">GST Billing Software</div>
-        <div>GST Services</div>
-        <div style="color: yellow">GST consultants online</div>
-      </div>
+          <div style="color: yellow">Digital Signature</div>
+          <div style="color: yellow">Udyam Registration Free</div>
+          <div style="color: yellow">GST Billing Software</div>
+          <div>GST Services</div>
+          <div style="color: yellow">GST consultants online</div>
+        </div>
+        <div class="company-details col-xl-3 col-sm-12 col-md-6">
+          <div>COMPANY REGISTRATION</div>
 
-      <div class="company-details">
-        <div style="font-size: 10px">COMPANY REGISTRATION</div>
+          <hr style="margin: 0" />
+          <br />
+          <span>
+            We are team of Experienced Consultant who have experience on Company
+            registration,private limited company registration.company
+            registration services in chennai and PVT Ltd company registration at
+            reasonable cost.
+          </span>
+        </div>
+        <div class="company-details col-xl-3 col-sm-12 col-md-6">
+          <div>Contact us</div>
+          <hr style="margin: 0" />
 
-        <hr />
-        <br />
-        <span>
-          We are team of Experienced Consultant who have experience on Company
-          registration,private limited company registration.company registration
-          services in chennai and PVT Ltd company registration at reasonable
-          cost.
-        </span>
-      </div>
-      <div class="company-details">
-        <div style="font-size: 12px">Contact us</div>
-        <hr />
-
-        <div style="color: yellow">Chennai</div>
-        <div style="color: yellowgreen">Call: 84700 74700</div>
+          <div style="color: yellow">Chennai</div>
+          <div style="color: yellowgreen">Call: 84700 74700</div>
+        </div>
+        <div class="last col-xl-12 col-sm-12 col-md-12">
+          Facebook Twitter LinkedIn
+        </div>
       </div>
     </div>
-    <div>
-      <div class="last">Facebook Twitter LinkedIn</div>
-    </div>
-
     <!-- CSS only -->
-    <!-- <link
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
